# Design_Pattern_Class_Design_2020

./: CMakeLists.txt  main.cpp
Component/: IComponent.h  IScreen.h  ISeat.h
Component/Screen/: HRScreen.h  RetinaScreen.h
Component/Seat/: FoldSeat.h  SlatSeat.h
Component/config/: ComponentType.h  ScreenType.h  SeatType.h
Facility/: IFacility.cpp  IFacility.h  ISwimmingpool.h  Swimmingpool2020.h
Facility/State/: AfterNoonState.h  EveningState.h  IState.cpp  IState.h  MorningState.h  SummerState.cpp  SummerState.h  WinterState.cpp  WinterState.h
Factory/: IFactory.h  SwimmingPoolFactory.h
Factory/Builder/: IBuilder.h  SwimmingPoolBuilder.h
Pool_Proxy/: cafeteria.h
Pool_Proxy/PoolManager/: PoolManager.h
Pool_Proxy/PoolObject/: Dish.h  IPoolObject.h  PoolProxy.cpp  PoolProxy.h  Spoon.h
ServiceLocator/: BusinessDelegate.h  Cache.h  FrontController.h  InitialContext.h  ServiceLocator.h  network.h
ServiceLocator/Service/: FiveGService.h  FourGService.h  IService.h
State_Factory_Template_Builder_Prototype/: facility.h
State_Factory_Template_Builder_Prototype/Component/: IComponent.h  IScreen.h  ISeat.h
State_Factory_Template_Builder_Prototype/Component/Screen/: HRScreen.h  RetinaScreen.h
State_Factory_Template_Builder_Prototype/Component/Seat/: FoldSeat.h  SlatSeat.h
State_Factory_Template_Builder_Prototype/Component/config/: ComponentType.h  ScreenType.h  SeatType.h
State_Factory_Template_Builder_Prototype/Facility/: IFacility.cpp  IFacility.h  ISwimmingPool.h  SwimmingPool2020.h
State_Factory_Template_Builder_Prototype/Facility/State/: IState.cpp  IState.h  SummerState.cpp  SummerState.h  (+2 more)
State_Factory_Template_Builder_Prototype/Factory/: IFactory.h  SwimmingPoolFactory.h
a/: CA.h
test/: a.h  b.h
(+2 files in other folders)
